Fixed: Enchant command would error when listing available enchants